--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "electron-json-storage": "^2.0.0",
-    "glob": "^7.0.3"
+    "glob": "^7.0.3",
+    "highlight.js": "^9.3.0",
+    "marked": "^0.3.5"
   }
 }
